setups/cilium/manifests/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: http-server
            port:
              number: 8080
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
